# hyperopic

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check-on-pull-request.yml
cloud/benchmark/: Cargo.toml  payload.json
cloud/benchmark/src/: main.rs
cloud/challenge/: Cargo.toml  invoke.sh  payload.json
cloud/challenge/src/: config.rs  main.rs
cloud/chessgame/: Cargo.toml
cloud/chessgame/src/: main.rs
cloud/chessmove/: Cargo.toml  invoke.sh  payload.json
cloud/chessmove/src/: main.rs
cloud/deploy/: config.ts  package-lock.json  package.json
cloud/deploy/lib/: BotStack.ts  ChallengerStack.ts  GameLambdaStack.ts
cloud/event-stream/: Cargo.toml
cloud/event-stream/src/: challenge_table.rs  eventprocessor.rs  forwarding.rs  gamestart.rs
cloud/payloads/: Cargo.toml
cloud/payloads/src/: chessmove.rs
engine/debug/: Cargo.toml
engine/debug/src/: main.rs
engine/hyperopic/: Cargo.toml
engine/hyperopic-cli/: Cargo.toml
engine/hyperopic-cli/src/: command.rs  latch.rs  main.rs  openings.rs
engine/hyperopic/src/: board.rs  format.rs  lib.rs  node.rs  openings.rs  parse.rs  phase.rs  position.rs  timing.rs
engine/hyperopic/src/bench/: mateinthree.rs  middlegame.rs
engine/hyperopic/src/eval/: castling.rs  development.rs  knightrim.rs  mod.rs  pawns.rs  safety.rs  space.rs  tables.rs
engine/hyperopic/src/search/: end.rs  mod.rs  moves.rs  pv.rs  quiescent.rs  search.rs  table.rs
engine/hyperopic/src/test/: best_move.rs  control.rs  mod.rs  move_comparison.rs  pinned.rs  termination.rs
engine/hyperopic/src/test/moves/: mod.rs
engine/testing/: Cargo.toml
engine/testing/src/: main.rs
lib/events/: Cargo.toml
lib/events/src/: processor.rs  (+1 more)
lib/game/: Cargo.toml
lib/lichess/: Cargo.toml
lib/openings/: Cargo.toml
lib/openings/src/: lib.rs
lib/response-stream/: Cargo.toml
openings/dynamodb-uploader/: Cargo.toml
openings/pgn-extractor/: Cargo.toml
tools/: workspace.dockerfile
(+6 files in other folders)
