[workspace]
resolver = "3"
members = [
    "engine/hyperopic",
    "engine/debug",
    "engine/testing",
    "cloud/event-stream",
    "cloud/benchmark",
    "cloud/chessgame",
    "cloud/chessmove",
    "cloud/challenge",
    "cloud/payloads",
    "openings/dynamodb-uploader",
    "openings/pgn-extractor",
    "lib/response-stream",
    "lib/game",
    "lib/events",
    "lib/lichess",
    "lib/openings",
    "engine/hyperopic-cli",
]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
