[package]
name = "hyperopic"
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
anyhow = "1.0.71"
regex = "1.8.1"
rustc-hash = "2.1.1"
serde = "1.0.171"
serde_json = "1.0.102"
itertools = "0.*"
threadpool = "1.8.1"

[dev-dependencies]
dotenv = "0.15.0"
