[package]
name = "openings"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyperopic = { path = "../../engine/hyperopic" }
tokio = "1.0"
serde_derive = "1.0.163"
serde = "1.0.163"
log = "0.4.17"
itertools = "0.*"
anyhow = "1.0.71"
rand = "0.*"
rusoto_core = { version = "0.48.0", features = ["rustls"] , default-features = false}
rusoto_dynamodb = { version = "0.48.0", features = ["rustls"] , default-features = false}
