[package]
name = "response_stream"
version = "0.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
anyhow = "1.0.71"
async-trait = "0.1.68"
reqwest = { version = "0.*", features = ["rustls-tls", "json", "stream"] , default-features = false}
